mengubah desain header

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="csstravel.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Kelompok 4D</title>
 </head>
 <body>
   <header>
       <div class="container">
+        <div class="header-left">
+          <img class="logo" src="image/Logo.PNG">
+        </div>
         <div class="menu-header">
           <ul>
             <li>
@@ -18,15 +21,20 @@
             </li>
 
             <li>
-              <a href="#">Blog</a>
+              <a href="#">Program</a>
             </li>
 
+            <li>
+              <a href="#">Profil</a>
+            </li>
             <li>
               <a href="#">About</a>
             </li>
           </ul>
         </div>
-
+        <div class="header-right">
+          <a href="#" class="login">Log in</a>
+        </div>
         </div>
   </header>  
 </body>
