Membuat heading main

--- a/index.html
+++ b/index.html
@@ -35,7 +35,17 @@
         <div class="header-right">
           <a href="#" class="login">Log in</a>
         </div>
-        </div>
+      </div>
   </header>  
+    <div class="top-wrapper">
+     <div class="container">
+       <h1>Berfikir Kreatif & Inovatif</h1>
+       <p>Raih cita-cita yang terbaik dengan inovasi</p>
+       <p>Serta lakukan kreatifitas tanpa batas.</p>
+        <div class="btn-wrapper">
+            <a href="a" class="btn signup">SELENGKAPNYA</a>
+        </div>
+      </div>
+    </div>               
 </body>
 </html>
