update heading main

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
        <p>Raih cita-cita yang terbaik dengan inovasi</p>
        <p>Serta lakukan kreatifitas tanpa batas.</p>
         <div class="btn-wrapper">
-            <a href="a" class="btn signup">SELENGKAPNYA</a>
+            <a href="#" class="btn signup">SELENGKAPNYA</a>
         </div>
       </div>
     </div>               
